--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,12 +11,28 @@
 }
 
 .box {
+    position: relative;
     min-height: 250px;
     flex-grow: 1;
     margin: 5px;
     padding: 1.5em 1.5em 1.5em 2em;
     box-shadow: 0 8px 6px -6px #aaa;
     border-radius: 3px;
+    // &:not(.name):before {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     top: 0;
+    //     bottom: 0;
+    //     left: 0;
+    //     right: 0;
+    //     background: rgba(0,255,255, 0.5);
+    //     border-radius: 3px;
+    //     transition: all 0.5s ease;
+    // }
+    // &:hover:before {
+    //     background: none;
+    // }
 }
 
 .name {
@@ -39,17 +55,17 @@
 
 // Splitting the "background size" independently of the "background" breaks it
 .code {
-    background: #ccc url('../img/code_js.png') no-repeat;
+    background: $tint-gradient, url('../img/code_js.png') no-repeat;
     background-size: cover;
 }
 
 .design {
-    background: #ccc url('../img/art-gabby.jpg') no-repeat;
+    background: $tint-gradient, url('../img/art-gabby.jpg') no-repeat;
     background-size: cover;
 }
 
 .dance {
-    background: #ccc url('../img/dance-bw.jpg') no-repeat;
+    background: $tint-gradient, url('../img/dance-bw.jpg') no-repeat;
     background-size: cover;
 }
 
